--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "antd": "^4.23.4",
+    "element-plus": "^2.2.17",
+    "js-md5": "^0.7.3",
+    "less": "^4.1.3",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
