--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "antd": "^4.23.4",
-    "element-plus": "^2.2.17",
     "js-md5": "^0.7.3",
     "less": "^4.1.3",
     "pinia": "^2.0.21",
+    "vant": "^3.6.4",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
+    "@types/js-md5": "^0.4.3",
     "@types/jsdom": "^20.0.0",
     "@types/node": "^16.11.56",
     "@vitejs/plugin-vue": "^3.0.3",
@@ -37,6 +37,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^2.7.1",
     "start-server-and-test": "^1.14.0",
     "typescript": "~4.7.4",
