--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pinia": "^2.0.21",
     "vant": "^3.6.4",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue-tsc": "^1.0.3"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
@@ -42,7 +43,6 @@
     "start-server-and-test": "^1.14.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
-    "vitest": "^0.23.0",
-    "vue-tsc": "^0.40.7"
+    "vitest": "^0.23.0"
   }
 }
